# voice-mcp

./: .gitignore  .mcp.json  CLAUDE.md  README.md  pyproject.toml  server.py
.claude/: settings.json
.claude/hooks/: notify.sh
.claude/skills/listen/: SKILL.md
.claude/skills/voice/: SKILL.md
.codex/: config.toml
.vibe/: config.toml
