[project]
name = "voice-mcp"
version = "0.1.0"
description = "Bidirectional voice MCP server for Claude Code — listen (STT) and speak (TTS)"
license = "Apache-2.0"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]",
    "mlx-audio[stt,tts] @ git+https://github.com/Blaizzy/mlx-audio.git@main",
    "sounddevice",
    "webrtcvad",
    "numpy",
    "setuptools>=78.1.1",
]
