[project]
name = "voice-mcp"
version = "0.1.0"
description = "Bidirectional voice MCP server for Claude Code — listen (STT) and speak (TTS)"
license = "Apache-2.0"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]",
    "mlx-audio[stt,tts] @ git+https://github.com/Blaizzy/mlx-audio.git@main",
    "sounddevice",
    "webrtcvad",
    "numpy",
    "setuptools>=78.1.1,<81",
    "en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl",
]
